--- a/packages/.gitignore
+++ b/packages/.gitignore
@@ -18,3 +18,12 @@ iron-router-progress
 /handlebar-helpers
 /iron-router-progress
 /blaze-layout
+/blog
+/minimongoid
+/moment
+/roles
+/fileCollection
+/shareit
+/reactive-table
+/underscore-string-latest
+/phantomjs
